# cds

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md
.github/workflows/: ci.yml  deploy-site.yml  release-mcp-lottery.yml  release-mcp-servers.yml  release-publish.yml  release.yaml
contexts/cds/: v1.jsonld
docs/: architecture.md  content-types.md  contributing.md  getting-started.md  linked-data.md  narrative-v2.md  self-hosting.md  signing.md  spike-wdn-161-ecdsa-p256.md
infra/: cdk.json  package-lock.json  package.json  tsconfig.json
infra/cdk.out/: SignedDataStack.assets.json  SignedDataStack.metadata.json  SignedDataStack.template.json  manifest.json  tree.json
infra/cdk.out/asset.0e1da2e40b6682900f6fd0cccea0f513a84372274770c0059783120dd21b8cf0/: __init__.py  ingestor.py  schema.py  signer.py
infra/cdk.out/asset.0e1da2e40b6682900f6fd0cccea0f513a84372274770c0059783120dd21b8cf0/sources/: football.py  football_models.py
infra/cdk.out/asset.5df96a7af28449d47f2ff2583857660ffd2ff1707fc6df584b9f5facd23c9755/: handler.py
infra/cdk.out/asset.b848b9b59246628de82eb35d2f7ca2b23e60592c092a76085034978ecde52448/: handler.py
infra/lambdas/processor/: handler.py
infra/lib/: signeddata-stack.ts
infra/scripts/: oidc-role.sh  post-deploy.sh
mcp/anvisa/: pyproject.toml  server.py
mcp/b3-fundamentus/: README.md  pyproject.toml  server.py
mcp/bible/: README.md  pyproject.toml  server.py
mcp/caged/: README.md  pyproject.toml  server.py
mcp/cep/: pyproject.toml  server.py
mcp/commodities/: Dockerfile  README.md  pyproject.toml  server.py
mcp/companies/: Dockerfile  README.md  pyproject.toml  server.py
mcp/currency/: README.md  pyproject.toml  server.py
mcp/energia/: README.md  pyproject.toml  server.py
mcp/finance/: Dockerfile  README.md  pyproject.toml  server.py
mcp/focus/: README.md  pyproject.toml  server.py
mcp/gov-br/: Dockerfile  README.md  pyproject.toml  server.py
mcp/ibge/: README.md  pyproject.toml  server.py
mcp/integrity/: README.md  pyproject.toml  server.py
mcp/lottery/: Dockerfile  README.md  cds_mcp_lottery.py  pyproject.toml  server.py
mcp/noticias/: pyproject.toml  server.py
mcp/processo/: server.py
mcp/sports/: README.md  pyproject.toml  server.py
mcp/weather/: README.md  pyproject.toml  server.py
scripts/: gen-ecdsa-p256-keypair.py
sdk/python/: .coverage  coverage.xml  pyproject.toml
sdk/python/cds/: __init__.py  ingestor.py  schema.py  signer.py  vocab.py
sdk/python/cds/sources/: cep.py  commodities.py  commodities_models.py  companies.py  companies_models.py  finance.py  finance_models.py  football.py  football_models.py  gov_br.py  gov_br_models.py  integrity.py  integrity_models.py  lottery.py  lottery_models.py  weather.py
sdk/python/signeddata_cds.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sdk/python/tests/: test_commodities.py  test_companies.py  test_finance.py  test_lottery.py  test_sdk.py  test_sources_gov_br.py  test_sources_integrity.py  test_sports.py  test_vc20.py  test_weather.py
sdk/typescript/: biome.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
sdk/typescript/src/: index.ts  ingestor.ts  schema.ts  signer.ts  vocab.ts
sdk/typescript/src/sources/: commodities.ts  companies.ts  finance.ts  football.ts  lottery.ts
sdk/typescript/test-keys/: private.pem  public.pem
sdk/typescript/tests/: lottery.test.ts  sdk.test.ts
site/: index.html
spec/: CDS-v0.1.0.md  CDS-v0.2.0.md  CDS-v0.3.0.md  MIGRATION-v0.1-to-v0.2.md
spec/domains/: commodities.brazil.md  companies.brazil.md  finance.brazil.md  gov-br.md  government.brazil.md  integrity.brazil.md  lottery.brazil.md
vocab/: cds.jsonld
vocab/domains/: commodities-brazil.jsonld  companies-brazil.jsonld  finance-brazil.jsonld  finance.jsonld  gov-br.jsonld  government-brazil.jsonld  integrity-brazil.jsonld  lottery-brazil.jsonld  news.jsonld  religion-bible.jsonld  sports-football.jsonld  weather.jsonld
vocab/sources/: api-bcb-gov-br-v1.jsonld  api-football-com-v3.jsonld  api-portaldatransparencia-gov-br-v1.jsonld  api-worldbank-org-v2.jsonld  bible-api-com-v1.jsonld  brapi-dev-v1.jsonld  brasilapi-com-br-v1.jsonld  caixa-gov-br-loterias-v1.jsonld  conab-gov-br-v1.jsonld  open-meteo-com-v1.jsonld
