[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "signeddata-mcp-finance"
version = "0.1.0"
description = "SignedData CDS MCP Server — Brazil Finance"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.4",
    "httpx>=0.27",
    "pydantic>=2.0",
    "cryptography>=42.0",
]

[project.scripts]
signeddata-mcp-finance = "mcp.finance.server:main"

[tool.setuptools.packages.find]
where = ["src"]
