[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "signeddata-mcp-finance"
version = "0.1.0"
description = "SignedData CDS MCP Server — Brazil Finance (SELIC, IPCA, FX, B3 quotes, Copom)"
requires-python = ">=3.12"
dependencies = [
    "signeddata-cds @ git+https://github.com/signed-data/cds.git@v0.3.0#subdirectory=sdk/python",
    "fastmcp>=0.4",
    "httpx>=0.27",
    "pydantic>=2.0",
    "cryptography>=42.0",
]

[project.scripts]
signeddata-mcp-finance = "server:main"

[tool.setuptools]
py-modules = ["server"]
