[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signeddata-cds"
version = "0.1.0"
description = "Curated Data Standard — Python SDK by SignedData.Org"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["curated-data", "signed-data", "real-time", "open-standard", "cryptography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "cryptography>=42.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage    = "https://signed-data.org"
Repository  = "https://github.com/signed-data/cds"
Documentation = "https://signed-data.org/docs"

[tool.setuptools.packages.find]
where   = ["."]
include = ["cds*"]

[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version      = "3.12"
strict              = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "--cov=cds --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["cds"]
omit   = ["tests/*"]
