[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signeddata-cds"
version = "0.4.0"
description = "Curated Data Standard — Python SDK by SignedData.Org"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["curated-data", "signed-data", "real-time", "open-standard", "cryptography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "cryptography>=42.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage    = "https://signed-data.org"
Repository  = "https://github.com/signed-data/cds"
Documentation = "https://signed-data.org/docs"
Changelog = "https://github.com/signed-data/cds/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where   = ["."]
include = ["cds*"]

[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version      = "3.12"
strict              = true
ignore_missing_imports = true
plugins             = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra             = true
init_typed                    = true
warn_required_dynamic_aliases = true
warn_uninitialized            = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "--cov=cds --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["cds"]
omit   = ["tests/*"]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.15.8",
]
